@@ -1,58 +1,0 @@
-/*
- *  Qtstalker stock charter
- *
- *  Copyright (C) 2001-2006 Stefan S. Stratigakos
- *
- *  This program is free software; you can redistribute it and/or modify
- *  it under the terms of the GNU General Public License as published by
- *  the Free Software Foundation; either version 2 of the License, or
- *  (at your option) any later version.
- *
- *  This program is distributed in the hope that it will be useful,
- *  but WITHOUT ANY WARRANTY; without even the implied warranty of
- *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- *  GNU General Public License for more details.
- *
- *  You should have received a copy of the GNU General Public License
- *  along with this program; if not, write to the Free Software
- *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307,
- *  USA.
- */
-
-#include "QuotePlugin.h"
-#include <qstringlist.h>
-#include <qwidget.h>
-#include "FileButton.h"
-#include <qcheckbox.h>
-
-class QtstalkerFormat : public QuotePlugin
-{
-  Q_OBJECT
-
-  public:
-    QtstalkerFormat ();
-    virtual ~QtstalkerFormat ();
-    void update ();
-    void prefDialog (QWidget *);
-    void cancelUpdate ();
-    void loadSettings ();
-    void saveSettings ();
-    bool createDirectories (QString &);
-    void buildGui ();
-
-  public slots:
-    void parse ();
-    
-  private:
-    QString lastPath;
-    bool cancelFlag;
-    FileButton *button;
-    QCheckBox *check;
-};
-
-extern "C"
-{
-  QuotePlugin * createQuotePlugin ();
-};
-
-
